# LakeSoul

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .scalafmt.conf  .taplo.toml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  MANIFEST.in  README-CN.md  README.md  _setup.py  community-guideline-cn.md  community-guideline.md  community-roles-cn.md  community-roles.md  devenv.nix  devenv.yaml  flake.nix  justfile  lefthook.yml  pg.property  pom.xml  pyproject.toml  pyrightconfig.json  rust-toolchain.toml  setup.py  treefmt.toml
cpp/: CMakeLists.txt  build-requirements.txt  compile.sh
cpp/include/lakesoul/: lakesoul_data_reader.h  lakesoul_dataset.h  lakesoul_fragment.h
cpp/src/lakesoul/: lakesoul_data_reader.cpp  lakesoul_dataset.cpp  lakesoul_fragment.cpp
native-io/lakesoul-io/: Cargo.toml
native-io/lakesoul-io-c/: Cargo.toml
native-io/lakesoul-io-c/src/: lib.rs
native-io/lakesoul-io/src/: constant.rs  lakesoul_io_config.rs  lakesoul_reader.rs  lakesoul_writer.rs  lib.rs  merge_handler.rs  merge_traits.rs  min_heap_combiner.rs  non_unique_fetcher.rs  sorted_merge_reader.rs  sorted_stream_merger.rs  transform.rs
native-io/parquet_poc/: Cargo.toml
native-io/parquet_poc/src/: lib.rs
native-metadata/lakesoul-metadata/: Cargo.toml  build.rs
native-metadata/lakesoul-metadata/src/: lib.rs  main.rs
native-metadata/proto/: Cargo.toml  build.rs
native-metadata/proto/src/: entity.proto  lib.rs
python/: .gitignore  Cargo.toml  MANIFEST.in  README.md  build.rs  build_wheel.py  compile_pb.sh  dataset.rs  docker_build_all_wheels.py  host_build_wheel.py  justfile  lib.rs  metadata.rs  metadata_poc.py  parquet_writer.py  pyproject.toml  ray_plan.md  test.sql  ttt.py
python/examples/: .gitignore  README.md  import_titanic.py  lakesoul-docker-compose-env  lakesoul.properties  lakesoul_env.sh  requirements.txt
python/examples/food101/: README.md  embedding.py  import_data.py  search.py
python/examples/imdb/: README.md  import_data.py  inference.py  train.py
python/examples/lakesoul-docker-compose-env/: docker-compose.yml
python/examples/titanic/: README.md  feature_transform.py  import_data.py  train.py
python/examples/titanic_ray/: README.md  train_ray.py
python/lakesoul/: __init__.py  tables.py
python/lakesoul/_lib/: _dataset.pyi
python/lakesoul/arrow/: __init__.py  _lakesoul_dataset.pyx  _lakesoul_dataset_cpp.pxd  dataset.py
python/lakesoul/huggingface/: from_lakesoul.py
python/lakesoul/metadata/: dao.py  db_manager.py  meta_ops.py  native_client.py  requirement.txt  utils.py
python/lakesoul/ray/: read_lakesoul.py
python/lakesoul/testing/: __init__.py
python/lakesoul/tests/: test_lakesoultable.py
python/lakesoul/torch/: dataset.py
python/metadata/: dao.py  db_manager.py  native_client.py  poc.py  utils.py
python/metadata/lib/: __init__.py  const.py  lakesoul_metadata_c.py
python/src/: context.rs  dataset.rs  lib.rs  metadata.rs  reader.rs  utils.rs  vector.rs  writer.rs
python/src/lakesoul/: __init__.py  catalog.py  logging.py  vector_index.py
python/tests/: debug.py
python/tests/_lib/: rust_module_test.py
python/tests/arrow/: test_lakesoul_read.py  test_lakesoul_write.py
python/tests/compat/: __init__.py  cases.py  engines.py  normalize.py  run_matrix.py  test_harness.py
python/tests/context/: basic_test.py
python/tests/daft/: test_daft_integration.py  test_daft_read.py  test_daft_write.py
python/tests/huggingface/: test_huggingface.py
python/tests/io/: test_writer.py
python/tests/metadata/: test_catalog_api.py  test_create_table.py
python/tests/ray/: test_l1_correctness.py  test_l2_parallelism.py  test_l4_performance.py  test_ray.py
python/tests/ray_tests/: conftest.py  test_l1_correctness.py  test_l2_partition.py  test_l3_boundary.py  test_l4_e2e_titanic.py  test_l5_e2e_titanic.py  test_ray.py  test_write_lakesoul.py
python/tests/spark/: log4j.properties  test_spark.py
python/tests/torch/: test_torch.py
python/tests/vector/: prepare_data.py  test_e2e_glove.py
rust/: .dockerignore  .gitignore  Cargo.toml  Cross.toml  copy.sql  debug.sql  justfile  lakesoul-tpch.sql  rust-toolchain.toml  rustfmt.toml  tpch-debug.sql  tpch.sql
rust/docker/: README.md  cross.Dockerfile
rust/io/: Cargo.toml
rust/io-c/: Cargo.toml
rust/io/src/: constant.rs  data_source.rs  format.rs  lib.rs  reader.rs  writer.rs
rust/lakesoul-common/: Cargo.toml
rust/lakesoul-common/src/: lib.rs  ser.rs
rust/lakesoul-console/: Cargo.toml
rust/lakesoul-console/src/: exec.rs  logo.rs  main.rs  print.rs
rust/lakesoul-datafusion/: .gitignore  Cargo.toml
rust/lakesoul-datafusion-cli/: Cargo.toml
rust/lakesoul-datafusion-cli/src/: exec.rs  main.rs
rust/lakesoul-datafusion/src/: adbc.rs  cli.rs  error.rs  lib.rs  tpch.rs
rust/lakesoul-examples/: Cargo.toml
rust/lakesoul-examples/k8s/: build.Dockerfile  lakesoul_flight_service.yaml
rust/lakesoul-flight/: Cargo.toml  build.rs
rust/lakesoul-flight-server/: Cargo.toml  build.rs
rust/lakesoul-flight-server/k8s/: flight_server.yaml
rust/lakesoul-flight-server/tests/: flight_sql.rs  test_utils.rs
rust/lakesoul-flight/k8s/: build.Dockerfile
rust/lakesoul-flight/src/: args.rs  banner.rs  flight_sever_wrapper.rs  flight_sql_server.rs  flight_sql_service.rs  jwt.rs  lib.rs  rbac.rs  token_codec.rs
rust/lakesoul-flight/tests/: flight_sql.rs  test_utils.rs
rust/lakesoul-io/: Cargo.toml  spill.out
rust/lakesoul-io-c/: Cargo.toml  build.rs  lakesoul_c_bindings.h
rust/lakesoul-io-c/src/: lib.rs
rust/lakesoul-io/benches/: buf_bench.rs  cache_bench.rs  format_write_bench.rs  partial_merge.rs  spill_bench.rs
rust/lakesoul-metadata/: Cargo.toml
rust/lakesoul-metadata-c/: .gitignore  Cargo.toml
rust/lakesoul-s3-proxy/: Cargo.toml
rust/lakesoul-vector/: Cargo.toml  README-CN.md  README.md
rust/proto/: Cargo.toml  build.rs
script/experiment/: README.md  pyproject.toml  spill_memory.py
script/lakesoul-e2e/: .gitignore  README.md  config.yaml  e2e_debug.session.sql  justfile  pyproject.toml
(+1832 files in other folders)
