# SPDX-FileCopyrightText: 2023 LakeSoul Contributors
#
# SPDX-License-Identifier: Apache-2.0


[workspace]
members = [
    "rust/lakesoul-metadata",
    "rust/lakesoul-metadata-c",
    "rust/proto",
    "rust/lakesoul-io",
    "rust/lakesoul-io-c",
    "rust/lakesoul-datafusion",
    "rust/lakesoul-flight",
    "rust/lakesoul-s3-proxy",
    "rust/lakesoul-console",
    "python",
]
resolver = "3"

[workspace.package]
authors = ["LakeSoul Contributors"]
edition = "2024"
homepage = "https://github.com/lakesoul-io/LakeSoul"
license = "Apache-2.0"
readme = "README.md"
version = "0.1.0"

[profile.release]
#lto = true

[workspace.dependencies]
datafusion = { version = "51" }
datafusion-common = { version = "51" }
datafusion-substrait = { version = "51" }
datafusion-expr = { version = "51" }
datafusion-datasource= { version = "51" }
arrow = { version = "57" }
arrow-schema = { version = "57" }
arrow-array = { version = "57" }
arrow-buffer = { version = "57" }
arrow-cast = { version = "57" }
arrow-arith = { version = "57" }
arrow-ipc = { version = "57" }
arrow-flight = { version = "57", features = ["flight-sql-experimental"] }
arrow-pyarrow = { version = "57" }
parquet = { version = "57" }
object_store = { version = "0.12", features = ["aws", "http"] }

tokio-stream = "0.1.9"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "compat"] }
tonic = "0.14"
tonic-build = "0.14"
derivative = "2.2.0"
atomic_refcell = "0.1.8"
futures = "0.3"
url = "2.2"
async-trait = "0.1"
serde_json = "1.0"
prost = "0.14"
prost-build = "0.14"
uuid = { version = "1.4.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
serde = { version = "1.0", features = ["derive", "std", "rc"] }
rand = "0.9"
rand_distr = "0.5"
rand_chacha = "0.9"
bytes = "1.4.0"
half = "^2.1"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = [
    "default",
    "chrono",
    "env-filter",
] }
test-log = "0.2.17"
# error handling
thiserror = "1.0"
anyhow = "1.0.79"
rootcause = "0.9"

http = "1.2.0"
tower = "0.4.13"
metrics = "0.21"
cached = { version = "0.54.0", features = ["async_tokio_rt_multi_thread"] }
clap = { version = "4.4", features = ["derive"] }


[workspace.lints.clippy]
too_many_arguments = "allow"
