# SPDX-FileCopyrightText: 2023 LakeSoul Contributors
#
# SPDX-License-Identifier: Apache-2.0


[workspace]
members = [
  "rust/proto",
  "rust/lakesoul-metadata",
  "rust/lakesoul-metadata-c",
  "rust/lakesoul-io",
  "rust/lakesoul-io-c",
  # "rust/lakesoul-datafusion",
  # "rust/lakesoul-flight",
  "rust/lakesoul-s3-proxy",
  # "rust/lakesoul-console",
  # "python",
]
resolver = "3"

[workspace.package]
authors = ["LakeSoul Contributors"]
edition = "2024"
homepage = "https://github.com/lakesoul-io/LakeSoul"
license = "Apache-2.0"
readme = "README.md"
version = "0.1.0"

[profile.bench]
debug = true
strip = false

[profile.profiling]
inherits = "release"
debug = true
opt-level = 2

[profile.test]
# Use a slightly better optimization level for tests
opt-level = 1

[workspace.dependencies]
# datafusion
datafusion = { version = "51" }
datafusion-common = { version = "51" }
datafusion-common-runtime = { version = "51" }
datafusion-session = { version = "51" }
datafusion-catalog-listing = { version = "51" }
datafusion-expr = { version = "51" }
datafusion-physical-expr = { version = "51" }
datafusion-physical-plan = { version = "51" }
datafusion-execution = { version = "51" }
datafusion-datasource = { version = "51" }
datafusion-datasource-parquet = { version = "51" }
datafusion-substrait = { version = "51" }
datafusion-python = { version = "51" }
# arrow
arrow = { version = "57", features = ["prettyprint"] }
arrow-schema = { version = "57", features = ["serde"] }
arrow-array = { version = "57", features = ["chrono-tz", "ffi"] }
arrow-buffer = { version = "57" }
arrow-cast = { version = "57" }
arrow-arith = { version = "57" }
arrow-ipc = { version = "57" }
arrow-flight = { version = "57", features = ["flight-sql-experimental"] }
arrow-pyarrow = { version = "57" }
parquet = { version = "57", default-features = true, features = ["async", "encryption"]}
object_store = { version = "0.12", features = ["aws", "http"] }
# async
futures = "0.3"
async-trait = "0.1"
# async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "compat"] }
tokio-stream = "0.1.9"
# web
tower = "0.4.13"
tonic = "0.14"
tonic-build = "0.14"
http = "1"
metrics = "0.24"
# cache
cached = { version = "0.54.0", features = ["async_tokio_rt_multi_thread"] }
# cli
clap = { version = "4.4", features = ["derive"] }
# utils
atomic_refcell = "0.1.8"
bytes = "1"
chrono = { version = "0.4", features = ["clock", "unstable-locales"] }
hex = "0.4"
jsonwebtoken = { version = "9", default-features = false }
url = "2"
half = "^2.1"
uuid = { version = "1", features = ["v4", "fast-rng", "macro-diagnostics"] }
derivative = "2.2.0"
regex = "1.11"
itertools = "0.14"
lazy_static = "1.4.0"
log = "0.4.27"
# serialization
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "std", "rc"] }
# protobuf
prost = "0.14"
prost-build = "0.14"
# random
rand = "0.9"
rand_distr = "0.5"
rand_chacha = "0.9"
# logging
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = [
  "default",
  "chrono",
  "env-filter",
] }
# for test
test-log = {version = "0.2", features = ["trace"]}
tempfile = "3.3.0"
# error handling
thiserror = "1.0"
anyhow = "1"
rootcause = "0.11"

[workspace.lints.clippy]

[workspace.lints.rust]
deprecated = "allow"