# SPDX-FileCopyrightText: 2023 LakeSoul Contributors
#
# SPDX-License-Identifier: Apache-2.0

[project]
name = "lakesoul"
version = "1.0.0b2"
authors = [
  { name="LakeSoul Team", email="lakesoul-technical-discuss@lists.lfaidata.foundation" },
]
description = "Python APIs for using LakeSoul"
readme = "README.md"
license = { text="Apache-2.0" }
requires-python = ">=3.8"
keywords = ["lakesoul", "bigdata", "ai"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pyarrow==16.1.0",
    "numpy<2.0",
    "protobuf~=5.0",
]

[optional-dependencies]
torch = ["torch>=1.11.0,<2.5"]
pandas = ["pandas>=1.4"]
datasets = ["datasets>=2.14", "urllib3<2,>=1.21.1"]
ray = ["ray>=2.7,<2.11.0"]
pyspark = ["pyspark==3.3.1"]
all = [ {include="all"} ]

[dependency-groups]
all = [
    "torch>=1.11,<2.5",
    "pandas>=1.4",
    "datasets>=2.14",
    "urllib3<2,>=1.21.1",
    "ray>=2.7,<2.11.0",
    "pyspark==3.3.1",
]
dev = [
    "pytest>=8",
    {include-group = "all"}
]

[project.urls]
"Homepage" = "https://github.com/lakesoul-io/LakeSoul"
"Bug Tracker" = "https://github.com/lakesoul-io/LakeSoul/issues"

[build-system]
requires = ["setuptools >= 62.1.0", "wheel", "cython >= 0.29.31,<3", "grpcio[protobuf] ~= 1.57","pyarrow==16.1.0"]
build-backend = "setuptools.build_meta"
[tool.setuptools.packages.find]

where = ["python"]
include = ["lakesoul*"]


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.cibuildwheel]
manylinux-x86_64-image = "dmetasoul/lakesoul-python-wheel-build-env-manylinux_2_28:v1.0.0"
build = "*-manylinux_x86_64"
skip = ["cp36-*", "cp37-*", "cp311-*", "cp312-*", "pp*"]

[tool.cibuildwheel.linux]
before-build = "rm -rf {project}/cpp/build && {project}/cpp/compile.sh"
repair-wheel-command = """\
    auditwheel --verbose repair --plat manylinux_2_28_x86_64 \
                      --exclude libarrow_python.so \
                      --exclude libarrow_dataset.so.1601 \
                      --exclude libarrow_acero.so.1601 \
                      --exclude libparquet.so.1601 \
                      --exclude libarrow.so.1601 \
                      -w {dest_dir} {wheel}\
    """

[tool.uv.workspace]
members = [
    "script/e2eTest",
]
