[package]
name = "lakesoul-python"
authors = ["LakeSoul Contributors"]
edition = "2024"
publish = false
version = "1.0.0"
include = ["*.rs"]
build = "build.rs"

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.0", features = [
    "extension-module",
    "experimental-async",
    "abi3-py38",
] }
lakesoul-io = { path = "../rust/lakesoul-io" }
lakesoul-metadata = { path = "../rust/lakesoul-metadata" }
tokio.workspace = true
arrow-pyarrow.workspace = true
arrow-schema.workspace = true
arrow-array.workspace = true
futures.workspace = true
prost.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
datafusion-substrait = { workspace = true }

[target.'cfg(not(target_os = "windows"))'.dependencies]
datafusion-substrait = { workspace = true, features = ["protoc"] }


[lints]
workspace = true
