[package]
name = "lakesoul-python"
authors = ["LakeSoul Contributors"]
edition = "2024"
publish = false
version = "1.1.0"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26", features = [
  "extension-module",
  "experimental-async",
  "abi3-py310",
] }
pyo3-log = "0.13"
log = "0.4"
lakesoul-datafusion = { path = "../rust/lakesoul-datafusion" }
lakesoul-io = { path = "../rust/lakesoul-io" }
lakesoul-metadata = { path = "../rust/lakesoul-metadata" }
tokio.workspace = true
arrow-pyarrow.workspace = true
arrow-schema.workspace = true
arrow-array.workspace = true
datafusion-common.workspace = true
datafusion-execution.workspace = true
datafusion-python.workspace = true
futures.workspace = true
prost.workspace = true
rootcause.workspace = true

datafusion-substrait = { workspace = true }


[lints]
workspace = true
