[build-system]
requires = ["setuptools >= 40.1.0", "wheel", "cython >= 0.29.31,<3"]
build-backend = "setuptools.build_meta"

[project]
name = "lakesoul"
version = "1.1.0"
authors = [
  { name="DMetaSoul", email="opensource@dmetasoul.com" },
]
description = "lakesoul-dataset"
readme = "README.md"
license = { text="Apache-2.0" }
requires-python = ">=3.8"
dependencies = [
    "pyarrow~=12.0",
    "grpcio[protobuf]~=1.57",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/lakesoul-io/LakeSoul"
"Bug Tracker" = "https://github.com/lakesoul-io/LakeSoul/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["lakesoul*"]

[project.optional-dependencies]
torch = ["torch>=1.11"]
pandas = ["pandas>=1.4"]
all = [
    "torch>=1.11",
    "pandas>=1.4",
]
