# SPDX-FileCopyrightText: 2023 LakeSoul Contributors
#
# SPDX-License-Identifier: Apache-2.0

[workspace]
members = [
    "lakesoul-metadata",
    "lakesoul-metadata-c",
    "proto",
    "lakesoul-io",
    "lakesoul-io-c",
    "lakesoul-datafusion",
    "lakesoul-flight",
    "lakesoul-flight-server",
    "lakesoul-s3-proxy"]
resolver = "2"

[profile.release]
#lto = true

[workspace.dependencies]
datafusion = { version = "45.0.0"}
datafusion-common = { version = "45.0.0"}
datafusion-substrait = { version = "45.0.0"}
arrow = { version = "54.1.0"}
arrow-schema = { version = "54.1.0"}
arrow-array = { version = "54.1.0"}
arrow-buffer = { version = "54.1.0"}
arrow-cast = { version = "54.1.0"}
arrow-arith = { version = "54.1.0"}
arrow-ipc = { version = "54.1.0"}
arrow-flight = { version = "54.1.0", features = ["flight-sql-experimental"]}
parquet = { version = "54.1.0"}
object_store = { version = "0.11.0", features = ["aws", "http"] }

tokio-stream = "0.1.9"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "compat"] }
tonic = "0.12.3"
tonic-build = "0.12.3"
derivative = "2.2.0"
atomic_refcell = "0.1.8"
futures = "0.3"
url = "2.2"
async-trait = "0.1"
serde_json = "1.0"
log = "^0.4"
prost = "0.13.4"
prost-build = "0.13.4"
uuid = { version = "1.4.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
serde = { version = "1.0", features = ["derive", "std", "rc"] }
rand = "^0.8"
bytes = "1.4.0"
half = "^2.1"
tracing = "0.1.40"
thiserror = "1.0"
anyhow = "1.0.79"
env_logger = "0.11"
http = "1.2.0"
tower = "0.4.13"
metrics = "0.21"
cached = { version = "0.54.0", features = ["async_tokio_rt_multi_thread"] }

[patch.crates-io]
sfv = { git = "https://github.com/undef1nd/sfv.git", tag = "v0.9.4" }