# SPDX-FileCopyrightText: 2023 LakeSoul Contributors
#
# SPDX-License-Identifier: Apache-2.0

[workspace]
members = [
    "lakesoul-metadata",
    "lakesoul-metadata-c",
    "proto",
    "lakesoul-io",
    "lakesoul-io-c",
    "lakesoul-datafusion",
    "lakesoul-flight",
    "lakesoul-s3-proxy", "lakesoul-console",
]
resolver = "3"

[profile.release]
#lto = true

[workspace.dependencies]
datafusion = { version = "47.0.0" }
datafusion-common = { version = "47.0.0" }
datafusion-substrait = { version = "47.0.0" }
datafusion-expr = {version = "47.0.0"}
arrow = { version = "55.0.0" }
arrow-schema = { version = "55.0.0" }
arrow-array = { version = "55.0.0" }
arrow-buffer = { version = "55.0.0" }
arrow-cast = { version = "55.0.0" }
arrow-arith = { version = "55.0.0" }
arrow-ipc = { version = "55.0.0" }
arrow-flight = { version = "55.0.0", features = ["flight-sql-experimental"] }
parquet = { version = "55.0.0" }
object_store = { version = "0.12.0", features = ["aws", "http"] }

tokio-stream = "0.1.9"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "compat"] }
tonic = "0.12.3"
tonic-build = "0.12.3"
derivative = "2.2.0"
atomic_refcell = "0.1.8"
futures = "0.3"
url = "2.2"
async-trait = "0.1"
serde_json = "1.0"
prost = "0.13.4"
prost-build = "0.13.4"
uuid = { version = "1.4.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
serde = { version = "1.0", features = ["derive", "std", "rc"] }
rand = "0.9"
rand_distr = "0.5"
rand_chacha = "0.9"
bytes = "1.4.0"
half = "^2.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.19", features = [
    "default",
    "chrono",
    "env-filter",
] }
test-log = "0.2.17"
thiserror = "1.0"
anyhow = "1.0.79"
http = "1.2.0"
tower = "0.4.13"
metrics = "0.21"
cached = { version = "0.54.0", features = ["async_tokio_rt_multi_thread"] }
clap = { version = "4.4", features = ["derive"] }

[patch.crates-io]
sfv = { git = "https://github.com/undef1nd/sfv.git", tag = "v0.9.4" }
