[package]
name = "lakesoul-io"
version = "0.0.0"
edition = "2021"

[dependencies]
datafusion = { git = "https://github.com/meta-soul/arrow-datafusion.git", branch = "datafusion-13-parquet-prefetch", features = ["simd"] }
object_store = { git = "https://github.com/meta-soul/arrow-rs.git", branch = "arrow-rs-24-parquet-bufferred", features = ["aws"] }
tokio-stream = "0.1.9"
tokio = { version = "1", features = ["full"] }
derivative = "2.2.0"
atomic_refcell = "0.1.8"
heapless = "0.7.16"
arrow = { git = "https://github.com/meta-soul/arrow-rs.git", branch = "arrow-rs-24-parquet-bufferred", features = ["prettyprint"] }
parquet = { git = "https://github.com/meta-soul/arrow-rs.git", branch = "arrow-rs-24-parquet-bufferred", features = ["async", "arrow"] }
bytes = "1.1"
futures = "0.3.25"
datafusion-common = { git = "https://github.com/meta-soul/arrow-datafusion.git", branch = "datafusion-13-parquet-prefetch" }
smallvec = { version = "1.10.0", features = ["const_generics", "union"] }
async-stream = "0.3"
pin-project-lite = "0.2.9"
futures-util = "0.3"
async-trait = "0.1.58"
dary_heap = "0.3.4"