[package]
name = "lakesoul-io"
version = "0.0.0"
edition = "2021"

[dependencies]
datafusion = { git = "https://github.com/meta-soul/arrow-datafusion.git", branch = "datafusion-13-parquet-prefetch", features = ["simd"] }
object_store = { git = "https://github.com/meta-soul/arrow-rs.git", branch = "arrow-rs-24-parquet-bufferred", features = ["aws"] }
tokio-stream = "0.1.9"
tokio = { version = "1", features = ["full"] }
derivative = "2.2.0"
atomic_refcell = "0.1.8"
heapless = "0.7.16"
arrow = { git = "https://github.com/meta-soul/arrow-rs.git", branch = "arrow-rs-24-parquet-bufferred", features = ["prettyprint"] }
arrow-schema = { git = "https://github.com/meta-soul/arrow-rs.git", branch = "arrow-rs-24-parquet-bufferred", features = ["serde"] }
parquet = { git = "https://github.com/meta-soul/arrow-rs.git", branch = "arrow-rs-24-parquet-bufferred", features = ["async", "arrow"] }
bytes = "1.1"
futures = "0.3.25"
datafusion-common = { git = "https://github.com/meta-soul/arrow-datafusion.git", branch = "datafusion-13-parquet-prefetch" }
serde_json = "1.0"
serde = { version = "1.0", default-features = false, features = ["derive", "std"], optional = true }
url = "2.2"

[dev-dependencies]
tempfile = "3.3.0"
