[package]
name = "parquet_poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = {version = "2.3.1"}
datafusion = { version = "13.0.0", features = ["simd"] }
object_store = { version = "0.5", features = ["aws"] }
parquet = {version="24.0.0", features=["default", "async"]}
arrow = {version="24.0.0", features=["default", "prettyprint","test_utils"]}
tokio = { version = "1", features = ["full"] }
futures = "0.3.25"
bytes = "1.1"